--- a/Hindibenits.html
+++ b/Hindibenits.html
@@ -27,7 +27,7 @@
 
     <section class="about" id="about">
       <a href="benifits.html" class="btn1">अंग्रेजी में पढ़ने के लिए</a>
-      <h1 class="heading">फायदे<span>कोल्ड प्रेस तेल के</span></h1>
+      <h1 class="heading">फायदे<span>कोल्ड प्रेस्ड तेल के</span></h1>
 
       <div class="row">
         <div class="image">
