--- a/Hindibenits.html
+++ b/Hindibenits.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Benefits in Hindi</title>
+    <title>Product</title>
     <!-- font awesome cdn link  -->
     <link
       rel="stylesheet"
@@ -32,7 +32,7 @@
       <div class="row">
         <div class="image">
           <img class="tilt" src="images/machine image.jpeg" alt="" />
-          <h1>कोल्ड प्रेस तेल की मशीन</h1>
+          <h1>शुद्ध लाकडी का घाना</h1>
         </div>
 
         <div class="content">
@@ -94,7 +94,7 @@
     </section>
     <!-- footer section  -->
 
-    <div class="footer">
+    <div class="footer" style="width: 105%;">
       <div class="note">
         <p><span>**Note :-</span>Home Delivary Available</p>
       </div>
