--- a/product.html
+++ b/product.html
@@ -91,7 +91,7 @@
     </section>
     <!-- footer section  -->
 
-    <div class="footer">
+    <div class="footer" style="width: 105%;">
       <div class="note">
         <p><span>**Note :-</span>Home Delivary Available</p>
       </div>
