--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Product</title>
       <!-- font awesome cdn link  -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
@@ -66,7 +66,7 @@
 
 <!-- footer section  -->
 
-<div class="footer"><div class="note"><p><span>**Note :-</span>Home Delivary Available</p></div>
+<div class="footer" style="width: 105%;"><div class="note"><p><span>**Note :-</span>Home Delivary Available</p></div>
 
 <!-- javascript part  -->
 
