--- a/Hindibenits.html
+++ b/Hindibenits.html
@@ -32,7 +32,7 @@
       <div class="row">
         <div class="image">
           <img class="tilt" src="images/machine image.jpeg" alt="" />
-          <h1>शुद्ध लाकडी का घाना</h1>
+          <h1>शुद्ध लकडी का घाना</h1>
         </div>
 
         <div class="content">
