--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </ul>
 
     <div class="content">
-        <h3  style="background: teal;border-radius: 2.5rem;"> Kanha <span>Kachi Ghani</span> </h3>
+        <h3  style="background:black;border-radius: 2.5rem;"> Kanha <span>Kachi Ghani</span> </h3>
 
         <img class="tilt" src="images/Pink and Black Modern Initials Logo Design.jpg" alt="">
       
