--- a/product.html
+++ b/product.html
@@ -14,7 +14,7 @@
     <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body style="padding-right: 5rem">
+  <body>
     <header>
       <div id="menu-bars" class="fas fa-bars"></div>
 
@@ -31,7 +31,7 @@
       <div class="box-container">
         <div class="box tilt">
           <img src="images/black-sesame-oil.jpeg" alt="" />
-          <h3>BLACK SESAME OIL</h3>
+          <h3>Black Sesame Oil</h3>
           <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam sint tenetur adipisci explicabo nisi libero, in rerum earum. Dolor, quibusdam!</p>
                 <a href="#" class="btn">learn more</a> -->
           <!-- <a href="product describe/blacksesame.html" class="btn">Benefit of this oil</a> -->
@@ -39,7 +39,7 @@
 
         <div class="box tilt">
           <img src="images/white-seasom.jpeg" alt="" />
-          <h3>WHITE SESAME OIL</h3>
+          <h3>White Sesame Oil</h3>
           <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam sint tenetur adipisci explicabo nisi libero, in rerum earum. Dolor, quibusdam!</p>
                 <a href="#" class="btn">learn more</a> -->
           <!-- <a href="#" class="btn">Benefit of this oil</a> -->
@@ -91,7 +91,7 @@
     </section>
     <!-- footer section  -->
 
-    <div class="footer" style="width: 105%;">
+    <div class="footer" style="width: 100%;">
       <div class="note">
         <p><span>**Note :-</span>Home Delivary Available</p>
       </div>
