--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
       <link rel="stylesheet" href="css/style.css">
   
 </head>
-<body style=" padding-right: 5rem;">
+<body>
     <header>
 
         <div id="menu-bars" class="fas fa-bars"></div>
@@ -66,7 +66,7 @@
 
 <!-- footer section  -->
 
-<div class="footer" style="width: 105%;"><div class="note"><p><span>**Note :-</span>Home Delivary Available</p></div>
+<div class="footer" style="width: 100%;"><div class="note"><p><span>**Note :-</span>Home Delivary Available</p></div>
 
 <!-- javascript part  -->
 
