--- a/benifits.html
+++ b/benifits.html
@@ -14,7 +14,7 @@
     <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body style="padding-right: 5rem">
+  <body >
     <header>
       <div id="menu-bars" class="fas fa-bars"></div>
 
@@ -24,9 +24,9 @@
         <a href="contact.html">contact</a>
       </nav>
     </header>
-
+    <a href="Hindibenits.html" class="btn1">For read in Hindi</a>
     <section class="about" id="about">
-      <a href="Hindibenits.html" class="btn1">For read in Hindi</a>
+      
       <h1 class="heading">benefits of <span>cold pressed oil</span></h1>
 
       <div class="row">
@@ -90,7 +90,7 @@
     </section>
     <!-- footer section  -->
 
-    <div class="footer" style="width: 105%;">
+    <div class="footer" style="width: 100%;">
       <div class="note">
         <p><span>**Note :-</span>Home Delivary Available</p>
       </div>
