--- a/Hindibenits.html
+++ b/Hindibenits.html
@@ -14,7 +14,7 @@
     <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body style="padding-right: 5rem">
+  <body>
     <header>
       <div id="menu-bars" class="fas fa-bars"></div>
 
@@ -24,15 +24,15 @@
         <a href="contact.html">contact</a>
       </nav>
     </header>
-
+    <a href="benifits.html" class="btn1">अंग्रेजी में पढ़ने के लिए</a>
     <section class="about" id="about">
-      <a href="benifits.html" class="btn1">अंग्रेजी में पढ़ने के लिए</a>
+      
       <h1 class="heading">फायदे<span>कोल्ड प्रेस्ड तेल के</span></h1>
 
       <div class="row">
         <div class="image">
           <img class="tilt" src="images/machine image.jpeg" alt="" />
-          <h1>शुद्ध लकडी का घाना</h1>
+          <h1>शुद्ध लाकडी का घाना</h1>
         </div>
 
         <div class="content">
@@ -94,7 +94,7 @@
     </section>
     <!-- footer section  -->
 
-    <div class="footer" style="width: 105%;">
+    <div class="footer" style="width: 100%;">
       <div class="note">
         <p><span>**Note :-</span>Home Delivary Available</p>
       </div>
